# DEEP-OC-lstm_test

./: Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  metadata.json
DEEP-OC-lstm_test/: Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose.yml  metadata.json
lstm_test/: .stestr.conf  Jenkinsfile  README.md  setup.cfg  tox.ini
lstm_test/docs/: Makefile  conf.py  index.rst  make.bat
lstm_test/lstm_test/dataset/: make_dataset.py
lstm_test/lstm_test/features/: build_features.py
lstm_test/lstm_test/models/: deep_api.py
lstm_test/lstm_test/tests/: test_unit_model.py
lstm_test/lstm_test/visualization/: visualize.py
lstm_test/notebooks/: 1.0-lstm_test_start.ipynb
