# -*- coding: utf-8 -*-
[metadata]
name = lstm_test
summary = LSTM test
description-file =
    README.md
author = Lara Lloret
author-email = lloret@ifca.unican.es
version = 0.0.01
license = MIT
home-page = https://github.com/deephdc/lstm_test
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    lstm_test

[entry_points]

deepaas.v2.model = 
    lstm_test = lstm_test.models.deep_api

